Use load_incluster_config in jupyther notebook examples
Closes #219

--- a/examples/notebooks/create_deployment.ipynb
+++ b/examples/notebooks/create_deployment.ipynb
@@ -19,7 +19,7 @@
    },
    "outputs": [],
    "source": [
-    "client.Configuration().host=\"http://localhost:8080\""
+    "config.load_incluster_config()"
    ]
   },
   {
